KSENROLL-12810:  Create co styling fix for header spacing. Also tweaks for course search labels.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69391 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -1032,7 +1032,7 @@ img {
 
 /* Overriding from block as required fields were dropping to another line */
 label:not(.uif-labelBlock) {
-  display: inline-block;
+  display: inline;
 }
 
 span.infoline label:not(.uif-labelBlock) {
@@ -2105,8 +2105,23 @@ section.uif-disclosure {
 #courseOfferingManagementCriteriaSection .uif-boxLayoutHorizontalItem{
      display: inline-flex;
      margin-top: 10px;
- }
+}
 
+#courseOfferingManagementCriteriaSection .uif-label{
+    margin-top: 5px;
+}
+
+#termCodeField_label{
+    width: 42px;
+}
+
+#inputCode_label{
+    width: 58px;
+}
+
+#KS-CourseOfferingEdit-CourseOfferingInformation{
+    margin-top: 20px;
+}
 
 #KS-CourseOfferingEdit-CourseOfferingInformation .uif-label{
     display: inline;
